--- a/src/occams/form/static/styles/interactive-editor.css
+++ b/src/occams/form/static/styles/interactive-editor.css
@@ -15,6 +15,8 @@
  ******************************************************************************/
 
 #occams-form-editor {
+	border-bottom: 1px dotted #CCC;
+	border-top: 1px dotted #CCC;
 	cursor: default;
 	position: relative;
 	overflow: hidden;
@@ -188,6 +190,7 @@
 
 #occams-form-types {
 	max-width: 300px;
+	margin-top: 1em;
 }
 
 #occams-form-types h3 {
